[gd_scene load_steps=47 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Player/Hook/Hook.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Player/LedgeWallDetector.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Player/FloorDetector.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Player/PassThrough.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Player/Skin.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Main/StateMachine/StateMachine.gd" type="Script" id=7]
[ext_resource path="res://src/Player/States/Move.gd" type="Script" id=8]
[ext_resource path="res://src/Player/States/Idle.gd" type="Script" id=9]
[ext_resource path="res://src/Player/States/Run.gd" type="Script" id=10]
[ext_resource path="res://src/Player/States/Air.gd" type="Script" id=11]
[ext_resource path="res://src/Player/States/Wall.gd" type="Script" id=12]
[ext_resource path="res://src/Player/States/Ledge.gd" type="Script" id=13]
[ext_resource path="res://src/Player/States/Hook.gd" type="Script" id=14]
[ext_resource path="res://src/Player/States/Debug.gd" type="Script" id=15]
[ext_resource path="res://src/Player/States/Stagger.gd" type="Script" id=16]
[ext_resource path="res://src/Player/States/Spawn.gd" type="Script" id=17]
[ext_resource path="res://src/Player/States/Die.gd" type="Script" id=18]
[ext_resource path="res://src/Combat/Stats.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/Combat/HitBox/HitBox.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/Player/Camera/PlayerCamera.gd" type="Script" id=21]
[ext_resource path="res://src/Gamefeel/Screenshake.tscn" type="PackedScene" id=22]
[ext_resource path="res://src/Gamefeel/Slowdown.tscn" type="PackedScene" id=23]
[ext_resource path="res://src/Player/Gun/Gun.tscn" type="PackedScene" id=24]
[ext_resource path="res://src/Player/Gadgets/Gadget_A.gd" type="Script" id=25]
[ext_resource path="res://src/Player/Gadgets/Bombs/GranadeController.tscn" type="PackedScene" id=26]
[ext_resource path="res://src/Player/Gadgets/Gadget_B.gd" type="Script" id=27]
[ext_resource path="res://src/Player/Sprite_Player.gd" type="Script" id=28]
[ext_resource path="res://assets/Characters/GarraDaMorte/animations/Garra_Braco.tscn" type="PackedScene" id=29]
[ext_resource path="res://assets/Characters/GarraDaMorte/animations/Garra_Cabeca.tscn" type="PackedScene" id=30]
[ext_resource path="res://assets/Characters/GarraDaMorte/animations/Garra_Corpo.tscn" type="PackedScene" id=31]
[ext_resource path="res://assets/Characters/GarraDaMorte/sprites/Garra_HookDown_Braco.png" type="Texture" id=32]
[ext_resource path="res://assets/Characters/GarraDaMorte/sprites/Garra_HookDown_BracoNormalMap.png" type="Texture" id=33]
[ext_resource path="res://assets/Characters/GarraDaMorte/sprites/Garra_HookFront_Braco.png" type="Texture" id=34]
[ext_resource path="res://assets/Characters/GarraDaMorte/sprites/Garra_HookFront_BracoNormalMap.png" type="Texture" id=35]
[ext_resource path="res://assets/Characters/GarraDaMorte/sprites/Garra_HookUpFront_Braco.png" type="Texture" id=36]
[ext_resource path="res://assets/Characters/GarraDaMorte/sprites/Garra_HookUpFront_BracoNormalMap.png" type="Texture" id=37]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -30, 15, -25, 15, 30, -15, 30, -15, -25 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 64.0
height = 0.000137329

[sub_resource type="Animation" id=3]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("LedgeWallDetector/Melee:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:normal_map")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 33 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 39 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 34 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:normal_map")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 35 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 38 ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:normal_map")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 37 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 39 ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 142
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 1 )

[node name="Hook" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -30 )

[node name="LedgeWallDetector" parent="." instance=ExtResource( 3 )]
editor/display_folded = true
is_active = true

[node name="Melee" type="CollisionShape2D" parent="LedgeWallDetector"]
visible = false
position = Vector2( 64, -30 )
rotation = 1.57079
shape = SubResource( 2 )
disabled = true

[node name="FloorDetector" parent="." instance=ExtResource( 4 )]

[node name="PassThrough" parent="." instance=ExtResource( 5 )]

[node name="Skin" parent="." instance=ExtResource( 6 )]

[node name="StateMachine" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 7 )
initial_state = NodePath("Move/Idle")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 9 )

[node name="JumpDelay" type="Timer" parent="StateMachine/Move/Idle"]
wait_time = 0.1
one_shot = true

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 10 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 11 )
acceleration_x = 5000.0

[node name="JumpDelay" type="Timer" parent="StateMachine/Move/Air"]
wait_time = 0.1
one_shot = true

[node name="ControlsFreeze" type="Timer" parent="StateMachine/Move/Air"]
wait_time = 0.16
one_shot = true

[node name="Wall" type="Node" parent="StateMachine/Move"]
script = ExtResource( 12 )
slide_acceleration = 1600.0
max_slide_speed = 400.0
friction_factor = 0.15
jump_strength = Vector2( 500, 400 )

[node name="Ledge" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="Hook" type="Node" parent="StateMachine"]
script = ExtResource( 14 )
arrive_push = 900.0

[node name="Debug" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Stagger" type="Node" parent="StateMachine"]
editor/display_folded = true
script = ExtResource( 16 )

[node name="Duration" type="Timer" parent="StateMachine/Stagger"]
one_shot = true

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 17 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 18 )

[node name="Stats" parent="." instance=ExtResource( 19 )]

[node name="HitBox" parent="." instance=ExtResource( 20 )]
position = Vector2( 0, -30 )

[node name="Camera2D" type="Camera2D" parent="."]
editor/display_folded = true
offset = Vector2( 0, -96 )
current = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 1.0
drag_margin_right = 0.1
drag_margin_bottom = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 21 )

[node name="ShiftTween" type="Tween" parent="Camera2D"]

[node name="Screenshake" parent="Camera2D" instance=ExtResource( 22 )]

[node name="Slowdown" parent="Camera2D" instance=ExtResource( 23 )]

[node name="Gun" parent="." instance=ExtResource( 24 )]
position = Vector2( 0, -30 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Gadget_A" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 0, -30.1883 )
script = ExtResource( 25 )

[node name="GranadeController" parent="Gadget_A" instance=ExtResource( 26 )]

[node name="GadgetTimer_A" type="Timer" parent="Gadget_A"]
one_shot = true

[node name="Gadget_B" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 0, -30.1883 )
script = ExtResource( 27 )

[node name="GadgetTimer_B" type="Timer" parent="Gadget_B"]
one_shot = true

[node name="PlayerStream" type="AudioStreamPlayer" parent="."]

[node name="Sprite_Player" type="Node2D" parent="."]
position = Vector2( -0.0949593, -44.6353 )
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 28 )
__meta__ = {
"_edit_group_": true
}

[node name="EffectAnimation" type="AnimationPlayer" parent="Sprite_Player"]
anims/Damage = SubResource( 3 )
anims/InvulnerabilityFlash = SubResource( 4 )
anims/MeleeTemp = SubResource( 5 )
anims/Rest = SubResource( 6 )

[node name="Garra_Braco" parent="Sprite_Player" instance=ExtResource( 29 )]

[node name="Garra_Cabeca" parent="Sprite_Player" instance=ExtResource( 30 )]

[node name="Garra_Corpo" parent="Sprite_Player" instance=ExtResource( 31 )]

[node name="Garra_BracoAttack" type="Sprite" parent="Sprite_Player"]
visible = false
texture = ExtResource( 32 )
normal_map = ExtResource( 33 )
flip_h = true
vframes = 7
hframes = 7
frame = 39

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite_Player/Garra_BracoAttack"]
anims/Garra_HookDown_Braco = SubResource( 7 )
anims/Garra_HookFront_Braco = SubResource( 8 )
anims/Garra_HookUpFront_Braco = SubResource( 9 )
[connection signal="shake" from="." to="Camera2D/Screenshake" method="_start"]
[connection signal="slow" from="." to="Camera2D/Slowdown" method="_start"]
[connection signal="jumped" from="StateMachine/Move/Air" to="." method="_on_Air_jumped"]
[connection signal="land" from="StateMachine/Move/Air" to="Camera2D" method="_on_land"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
[connection signal="timeout" from="Gadget_A/GadgetTimer_A" to="Gadget_A" method="_on_GadgetTimer_A_timeout"]
[connection signal="slow" from="Gadget_B" to="Camera2D/Slowdown" method="_start"]
[connection signal="slow" from="Gadget_B" to="Gun" method="_on_Gadget_B_slow"]
[connection signal="timeout" from="Gadget_B/GadgetTimer_B" to="Gadget_B" method="_on_GadgetTimer_B_timeout"]
[connection signal="timeout" from="Gadget_B/GadgetTimer_B" to="Gun" method="_on_GadgetTimer_B_timeout"]

[editable path="Gadget_A/GranadeController"]

[editable path="Sprite_Player/Garra_Braco"]

[editable path="Sprite_Player/Garra_Cabeca"]

[editable path="Sprite_Player/Garra_Corpo"]
